# shallow-review-2025

./: .gitignore  AGENTS.md  README.md  migrate_add_url_hashes.py  pipeline.py  pyproject.toml
data/: taxonomy.yaml
scraping-scripts/: README.md  pyproject.toml
scraping-scripts/AF-and-LW-scraper/: 1-scrape-AF-or-LW.py  2-analyze-AF-or-LW-links.py  README.md  utils.py
scraping-scripts/AF-and-LW-scraper/archive/: manual-AF-analysis-2.md  manual-AF-analysis.md
scraping-scripts/AF-and-LW-scraper/notebooks/: AF-AI-post-filtering.ipynb  assistant-2025.ipynb  assistant.ipynb
scraping-scripts/AF-and-LW-scraper/results/: 1-lw_raw_posts.csv  2-lw_filtered_posts.csv  3-lw_summaries_and_tags.csv  3-lw_summaries_and_tags.md  4-lw_curated.csv
scraping-scripts/AF-and-LW-scraper/results/sheets/: all-alignment-forum-posts-2025-filtered.csv
scraping-scripts/arxiv-scraper/: 1-scrape.py  2-filter_results.py  3-docx_links_to_csv.py  4-find-unique-arxiv-links.py  5-curate-unique-arxiv-links.py  6-create-taxonomy-and-editorial-from-curated-links.py  README.md  main.sh
scraping-scripts/arxiv-scraper/input/: lenz-ai-safety-papers.csv  shallow-review-2025.docx  shallow-review-2025.txt
scraping-scripts/arxiv-scraper/notebooks/: arxiv-search.ipynb
scraping-scripts/arxiv-scraper/results/: 1-arxiv_raw_search_results.csv  2-arxiv_annotated_results.csv  2-arxiv_highly_relevant_results.csv  3-arxiv_links_with_new_flag.csv  3-arxiv_new_links_only.csv  6-arxiv_curated_relevant_only.csv  6-arxiv_curated_with_flags.csv  7-taxonomy-and-editorial.txt  shallow-review-2025-links.csv
(+81 files in other folders)
