[project]
name = "scraping-scripts"
version = "0.1.0"
description = "Scripts for scraping the Alignment Forum, LessWrong and Arxiv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "docx>=0.2.4",
    "google>=3.0.0",
    "google-api-python-client>=2.185.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]
